# gismo

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .travis.yml  BoundaryBasisFunctions1.pvd  CMakeLists.txt  COPYING.txt  COPYRIGHT.txt  CTestConfig.cmake  Geometry.m  Gismo.m  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.txt  appveyor.yml  beta_L.pvd  beta_L.vtp  beta_R.pvd  beta_R.vtp  changelog  circle.yml  dummy.txt  geoemtry_init.pvd  geoemtry_init_0.vts  geoemtry_init_0_mesh.vtp  geoemtry_init_1.vts  geoemtry_init_1_mesh.vtp  geometry_init.pvd  geometry_init_0_mesh.vtp  geometry_init_1_mesh.vtp  gismo_lib.pc.in  gismo_nolib.pc.in  pyproject.toml  run_gismo.sh  setup.py  submodules.txt  (+3 more)
cppyy/: CMakeLists.txt  __init__.py.in  pyproject.toml.in  pythonize.py.in  setup.cfg.in
deploy/: CMakeLists.txt  Makefile  README.md  README.txt  instructions.txt  main.cpp
doc/: BSpline.dox  BasisInterface.dox  CMakeLists.txt  Combinatorics.dox  Doxyfile.in  Eigen.doxytags  Examples.dox  Extensions.dox  GeometryInterface.dox  GettingStarted.dox  Groups.dox  HBSplines.dox  Modules.dox  Nurbs.dox  Plugins.dox  PoissonSolver.dox  References.dox  Snippets.dox  Tutorial01.dox  Tutorial02.dox  Tutorial03.dox  Tutorial04.dox  TutorialPoisson.dox  Tutorials.dox  UnblockMathJax.dox  UsersManual.dox  Wiki.dox  adaptRefinementThb_example.dox  adaptiveConvectionDiffusionReaction_example.dox  assembly_example.dox  bSplineBasis_example.dox  bSplineCurve_example.dox  bSplineSurface_example.dox  basis_example.dox  biharmonic.dox  biharmonic2_example.dox  biharmonic_example.dox  commandLineArg_example.dox  exampleAdaptRefinementTHB.dox  exampleAdaptiveCDR.dox  (+89 more)
doc/snippets/: CMakeLists.txt  bspline_basis.cpp  bspline_basis.cxx  bspline_cube.cpp  bspline_cube.cxx  bspline_greville.cpp  bspline_greville.cxx  bspline_vecxmat.cpp  compile_snippet.cpp.in
examples/: BezierToVTK.cpp  CMakeLists.txt  Hausdorff_test.cpp  IGA_RM_Shell.cpp  IRLS_example.cpp  KirchhoffLoveShell_example.cpp  L2projection_example.cpp  LinpLap_example.cpp  LinpLap_example2.cpp  MyBioMorpho.cpp  MyBioMorphoParam.cpp  MyHeatExample.cpp  MyMorphoEl.cpp  MyViscoEl.cpp  NewtRaphTest.cpp  ParameterizationExample.cpp  Reissner-Mindlin_example.cpp  Tutorial_PoissonSolver.cpp  adaptRefinementThb_example.cpp  adaptRefinementThb_example2.cpp  adaptiveConvectionDiffusionReaction_example.cpp  adaptive_opt_fitting_example.cpp  alia_volume_example.cpp  approxProjection_example.cpp  as_parameterization_example.cpp  assembly_example.cpp  bSplineBasis_example.cpp  bSplineCurveTrim_example.cpp  bSplineCurve_example.cpp  bSplineSurface_example.cpp  basis_example.cpp  biharmonic.cpp  biharmonic2_example.cpp  biharmonic3_example.cpp  biharmonic_argyris_example.cpp  biharmonic_example.cpp  biharmonic_ieti_example.cpp  biharmonic_ieti_example.old  biharmonic_ieti_example2.cpp  biharmonic_ieti_example2.old  (+288 more)
extensions/gsAdDSL/: CMakeLists.txt  exprtk_addsl_ar_adaptor.hpp  exprtk_addsl_ar_forward.hpp  gsAdDSL.cpp  gsAdDSL.h  gsAdDSLForwardDeclaration.h
extensions/gsCoDiPack/: CMakeLists.txt  README.md  exprtk_codi_adaptor.h  exprtk_codi_adaptor.hpp  exprtk_codi_forward.h  exprtk_codi_forward.hpp  exprtk_codi_rf_adaptor.hpp  exprtk_codi_rf_forward.hpp  exprtk_codi_rr_adaptor.hpp  exprtk_codi_rr_forward.hpp  gsCoDiPack.cpp  gsCoDiPack.h
extensions/gsCoreLibs/: CMakeLists.txt  gsCoreLibs.cpp  gsCoreLibs.h  superlu_make.inc
extensions/gsFdbb/: CMakeLists.txt  gsFdbb.cpp  gsFdbb.h
extensions/gsFupBasis/: CMakeLists.txt  ModuleFup.f90  gsFupBasis.h  gsTensorFupBasis.h
extensions/gsHLBFGS/: CMakeLists.txt  HLBFGS_wrapper.cpp  HLBFGS_wrapper.h  gsHLBFGS.h
extensions/gsIpopt/: CMakeLists.txt  gsIpOpt.h  gsOptProblem.h  gsOptProblem.hpp  gsOptProblem_.cpp
extensions/gsMultiPrecision/: CMakeLists.txt  README.md  gsMultiPrecision.h
extensions/gsOpenCascade/: CMakeLists.txt  README.md  gsReadBrep.cpp  gsReadBrep.h
extensions/gsOpennurbs/: CMakeLists.txt  faq.txt  gsReadOpenNurbs.cpp  gsReadOpenNurbs.h  gsWriteOpenNurbs.cpp  gsWriteOpenNurbs.h  gsWriteOpenNurbs.hpp  gsWriteOpenNurbs_.cpp  readme.txt
extensions/gsParasolid/: CMakeLists.txt  gsFrustrum.cpp  gsFrustrum.h  gsPKSession.cpp  gsPKSession.h  gsReadParasolid.cpp  gsReadParasolid.h  gsWriteParasolid.cpp  gsWriteParasolid.h  gsWriteParasolid.hpp
extensions/gsPreCICE/: CMakeLists.txt  gsPreCICE.h  gsPreCICEFunction.h  gsPreCICEVectorFunction.h
extensions/gsSpectra/: CMakeLists.txt  gsSpectra.h
extensions/gsTorch/: CMakeLists.txt  gsTensor.h  gsTensor.hpp  gsTensorOptions.h  gsTensorOptions.hpp  gsTensorOptions_.cpp  gsTensorWrapper.h  gsTensorWrapper.hpp  gsTensorWrapper_.cpp  gsTensor_.cpp  gsTorch.h  gsTorch.hpp  gsTorch_.cpp  test_linux_cxx11_abi.cxx
extensions/gsTrilinos/: CMakeLists.txt  Operator.cpp  Operator.h  SparseMatrix.cpp  SparseMatrix.h  Vector.cpp  Vector.h  gsTrilinos.h  gsTrilinosEigenProblem.cpp  gsTrilinosEigenProblem.h  gsTrilinosForwardDecl.h  gsTrilinosHeaders.h  gsTrilinosNonLinear.cpp  gsTrilinosNonLinear.h  gsTrilinosSolvers.cpp  gsTrilinosSolvers.h
instance/: CMakeLists.txt
src/: CMakeLists.txt  gismo.h  gsVisitorNitscheLinpLap.h
tutorials/: CMakeLists.txt
unittests/: CMakeLists.txt  gismo_unittest.h  gsAbs_Diff_test.cpp  gsBasisComponents_test.cpp  gsBoundaryConditions_test.cpp  gsExprAssembler_test.cpp  gsFileManager_test.cpp  gsFittingRWFTest.cpp  gsFixedIssues_test.cpp  gsGeometry_test.cpp  gsGlobs_test.cpp  gsHTBasisDegreeElevate_test.cpp  gsIterativeSolvers_test.cpp  gsKLShell_test.cpp  gsKnotVectors.cpp  gsKnotVectors_test.cpp  gsKronecker_test.cpp  gsLinearSolvers.cpp  gsLinearSolvers_test.cpp  gsMakeUnsigned.cpp  gsMatrixOp_test.cpp  gsMoveSemantics.cpp  gsMoveSemantics_test.cpp  gsNewton_test.cpp  gsOptionList_test.cpp  gsParametrization_test.cpp  gsPoissonSolver_test.cpp  gsPreconditioner_test.cpp  gsQuadratureRules_test.cpp  gsReadFile_test.cpp  gsRefinement_test.cpp  gsRemapInterface_test.cpp  gsRemoveCorners_test.cpp  gsSortedVector_test.cpp  gsThbs_geometry_test.cpp  gsTutorial.cpp  gsUtils_test.cpp  main.cpp
(+2678 files in other folders)
